# heprefs

./: .gitignore  LICENSE  mypy.ini  pyproject.toml  readme.md  setup.py
heprefs/: __main__.py  arxiv_article.py  cds_article.py  doi_article.py  heprefs.py  inspire_article.py  invenio.py
