[tool.poetry]
name = "heprefs"
version = "0.1.4"
description = "A commandline helper tool for high-energy physics referencing."
authors = ["Sho Iwamoto (Misho) <webmaster@misho-web.com>"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/misho104/heprefs"

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"
typing = {version = "^3.6", python = "<3.5"}
click = "^7.0"
arxiv = "^0.3.1"
feedparser = "^5.2"

[tool.poetry.dev-dependencies]
python = "^3.4"
mypy = "^0.650.0"
flake8 = "^3.6"

[tool.poetry.scripts]
heprefs = "heprefs.heprefs:heprefs_main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
