[tool.poetry]
name = "heprefs"
version = "0.2.0beta"
description = "A commandline helper tool for high-energy physics referencing."
authors = ["Sho Iwamoto (Misho) <webmaster@misho-web.com>"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/misho104/heprefs"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1"
arxiv = "^1.4"
feedparser = "^6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0"

[tool.poetry.scripts]
heprefs = "heprefs.heprefs:heprefs_main"

[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"
